# 3DPrinter_Qt6

./: .gitignore  .gitmodules  AGENTS.md  CI_TAG_RELEASE.md  CLAUDE.md  CMakeLists.txt  CrealityPrint_Qt_GUI_Rewrite_Architecture.md  PROJECT_STRUCTURE.md  README.md  TASKS.md  TOPBAR_ACCEPTANCE_CHECKLIST.md  build.bat  build.ps1  build_log_v22b.txt  ninja_output.txt  proxy-setup-fixed.js  test_libslic3r.ps1  vcpkg.json
.agents/skills/analyzing-source-truth-gap/: SKILL.md
.agents/skills/migrating-source-truth/: SKILL.md
.claude/: settings.local.json
.claude/agents/: source-truth-migration.md
.claude/rules/: build-rules.md  core-architecture.md  debugging.md  docs-task-accounting.md  qml-boundaries.md  source-truth-migration.md
.claude/skills/analyze-source-truth-gap/: SKILL.md
.claude/skills/analyzing-source-truth-gap/: SKILL.md
.claude/skills/continue-source-truth-migration/: SKILL.md
.codex/: hooks.json
.codex/agents/: source-truth-migration.toml
.codex/rules/: build-rules.md  qml-boundaries.md  source-truth-migration.md
.github/: copilot-instructions.md
.github/agents/: source-truth-migration.agent.md
.github/prompts/: continue-source-truth-migration.prompt.md
.github/workflows/: tag-build.yml  tag-trigger-debug.yml
.planning/: INDEX.md  MILESTONES.md  PROJECT.md  REMAINING_MIGRATION_PLAN.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  i18n-workflow.md  v2.9-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v3.1-MILESTONE-AUDIT.md  v3.2-MILESTONE-AUDIT.md  v3.6-MILESTONE-AUDIT.md  v4.1-MILESTONE-AUDIT.md  v4.3-MILESTONE-AUDIT.md  v4.4-MILESTONE-AUDIT.md  v4.6-MILESTONE-AUDIT.md  准备页收敛路线图.md  差距清单_Prepare页.md  差距盘点_全局.md  未移植功能盘点.md
.planning-v1-crealityprint-archive/: ROADMAP.md  STATE.md
.planning-v1-crealityprint-archive/codebase/: CONCERNS.md  CONVENTIONS.md  STACK.md
.planning/audits/: 2026-06-23-code-drift-audit.md  2026-06-23-implementation-audit.md  2026-06-24-plan-implementation-alignment.md  2026-06-25-partplate-assembleview-gap.md  GLOBAL-UI-REVIEW.md  v2.2-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STRUCTURE.md  TESTING.md
.planning/debug/: prepare-ui-click-render-regressions.md  preview-orbit-disappears.md  preview-page-unusable.md  qrhi-d3d12-crash.md
.planning/details/: PREPARE-SEARCH-DETAIL.md  PRESET-DETAIL.md  SLICE-DETAIL.md
.planning/milestones/: v2.9-REQUIREMENTS.md  v2.9-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v3.1-ROADMAP.md  v3.6-REQUIREMENTS.md  v3.7-ROADMAP.md  v3.7-VISUAL-MATRIX.md  v3.8-MILESTONE-AUDIT.md  v3.8-REQUIREMENTS.md  v3.9-MILESTONE-AUDIT.md  v3.9-REQUIREMENTS.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md  v4.1-REQUIREMENTS.md  v4.1-ROADMAP.md  v4.2-MILESTONE-AUDIT.md  v4.2-REQUIREMENTS.md  v4.2-ROADMAP.md  v4.3-REQUIREMENTS.md  v4.3-ROADMAP.md  v4.4-REQUIREMENTS.md  v4.5-MILESTONE-AUDIT.md  v4.5-REQUIREMENTS.md  v4.6-REQUIREMENTS.md  v4.6-ROADMAP.md  v4.7-MILESTONE-AUDIT.md  v4.8-MILESTONE-AUDIT.md  v4.8-REQUIREMENTS.md  v4.8-ROADMAP.md  v5.0-MILESTONE-AUDIT.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md  v5.1-MILESTONE-AUDIT.md  v5.1-REQUIREMENTS.md  v5.1-ROADMAP.md  v5.2-MILESTONE-AUDIT.md  v5.2-ROADMAP.md  v5.3-MILESTONE-AUDIT.md  (+12 more)
.planning/research/: ARCHITECTURE.md  D3D12-CRASH-ROOT-CAUSE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  partplate-ui-gap.md  sla-scope.md  v3.6-SCREENSHOT-SOURCE-TRUTH.md  v5.2-ui-excellence-audit-synthesis.md
.planning/reviews/: 7f86d28-REVIEW.md
.planning/spikes/: MANIFEST.md
.planning/ui-reviews/: Components-UI-REVIEW.md  Controls-UI-REVIEW.md  Dialogs-UI-REVIEW.md  Pages-UI-REVIEW.md  Panels-UI-REVIEW.md  PreparePage-UI-REVIEW.md
.zcode/: config.json
.zcode/plans/: plan-sess_3a06497b-a69b-4115-b786-2c64ff6a695b.md
cmake/: BuildDepsFromSource.cmake  BuildLibslic3r.cmake  BuildLibslic3rFromSource.cmake  buildinfo.h.in.stub
cmake/stubs/: MeshBoolean_mcut_stub.cpp
docs/: CrealityPrint_Qt_GUI重写架构.md  Qt版本升级与RHI渲染管线评估.md  TASKS.md  v3.6-ui-inventory.md  源码真值功能矩阵.md  源码真值基线.md
githooks/: pre-commit
i18n/: de.ts  en.ts  fr.ts  ja.ts  ko.ts  zh_CN.ts
scripts/: _full_build.ps1  _quick_build.ps1  _rebuild.ps1  _v52_i18n_sweep.py  _v52_i18n_sweep_2.py  _v52_pseudo_button_detect.py  _v53_i18n_glossary.py  _v53_i18n_translate.py  _v53_spacing_sweep.py  _v56_phase204_garbage_fix.py  _v56_phase204_i18n_longtail.py  auto_verify_with_vcvars.ps1  bench_ollama_direct.py  build_109_verify.ps1  build_114_targeted.ps1  build_115_targeted.ps1  build_from_source.ps1  build_review_fix.ps1  build_stub_dlls.bat  build_tests_only.ps1  build_with_vcvars.ps1  capture_qml_warnings.ps1  capture_runtime_screenshot.ps1  cdb_capture.bat  check_all_crt.ps1  check_deps_crt.ps1  check_imports.ps1  claude-init.js  crash_diag.ps1  debug_run.ps1  debug_run2.ps1  fill_en_ts.py  finish_114.ps1  finish_116.ps1  generate_baseline.ps1  generate_stub_dlls.py  nas_extract_openclaw_api.sh  nas_find_openclaw_routes.sh  nas_net_check.sh  nas_openclaw_app_test.sh  (+23 more)
src/: MainWindow.cpp  MainWindow.h  main.cpp  nanosvg_impl.cpp
src/cli/: CliRunner.cpp  CliRunner.h  main_cli.cpp
src/core/: DelayLoadHook.cpp
src/pages/: MonitorPage.cpp  MonitorPage.h  ParameterPage.cpp  ParameterPage.h  PreparePage.cpp  PreparePage.h  PreviewPage.cpp  PreviewPage.h
src/qml_gui/: BBLTopbar.qml  BackendContext.cpp  BackendContext.h  CameraImageProvider.cpp  CameraImageProvider.h  Theme.qml  main.qml  main_qml.cpp  qml.qrc  qmldir
src/theme/: AppTheme.cpp  AppTheme.h
tests/: CliTests.cpp  E2EWorkflowTests.cpp  GizmoGeometryTests.cpp  GizmoMathTests.cpp  GizmoStateWiringTests.cpp  InventoryAuditTests.cpp  ObjectPickingTests.cpp  PartPlateTests.cpp  PrepareSceneDataTests.cpp  PreviewParserTests.cpp  QmlUiAuditTests.cpp  README.md  ViewModelSmokeTests.cpp  ViewportContextMenuTests.cpp
tests/data/: fixture_recipes.md  multi_material_fixture.3mf
tests/fixtures/: orca_sample.gcode
tests/visual/: GLViewportTestStub.cpp  GLViewportTestStub.h  VisualRegressionTests.cpp
tools/render_bench/: main.cpp
(+1061 files in other folders)
